-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10
-
None
-
ee089f790 (dev), 978148672 (dev), a56208d8d (6.10), ca8905021 (6.10)
Consider the following code:
// Referential.qml import QtQuick Rectangle { id: self property Referential ref: self }
Running qmllint on it yields
Warning: Referential.qml:5:31: Cannot assign binding of type Rectangle to Referential
[incompatible-type]
That's obviously wrong; qmllint picks up the base type instead of the elements actual type.
- resulted in
-
QTBUG-138936 qmllint doesn't recognize the type of the root component of the current file
-
- Reported
-
For Gerrit Dashboard: QTBUG-138515 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
662844,6 | QQmlJSImortVisitor: Cleanup global scope setup | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
663166,5 | qmllint: Give root scope the correct type | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
663708,3 | QQmlJSImortVisitor: Cleanup global scope setup | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
663710,4 | qmllint: Give root scope the correct type | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |