QQmlJSImortVisitor: Cleanup global scope setup

This commit attempts to make the setup of the global scope more
readable, and fixes a few (currently harmless) inconsistencies:

- There's now a comment why we're creating a scope representing the
  global object in the constructor.
- The setup happens on the actual scope representing the global scope,
  not on m_currentScope. m_currentScope still points to the global
  scope, but we prevent accidents should that ever change.
- We use enterRootScope also for plain JS files (in visit(Program *)),
  not only for modules and QML filse.
- We only call setIsRootFileComponentFlag for QML files, the concept of
  a root component is only well defined for QML after all.

Pick-to: 6.10
Task-number: QTBUG-138515
Change-Id: I27c0a93a201a9d25609543d6ff250f701cbeb94f
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>